# earthcare-dggs

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  intro.md  myst.yml  pixi.toml  pyproject.toml
.github/workflows/: deploy-docs.yml
earthcare_dggs/: __init__.py  convert.py  settings.py
notebooks/: 01_download.ipynb  02_explore.ipynb  04_profiles_to_healpix.ipynb  05_dggs_zarr.ipynb  07_msi_cellpoint_s3style.ipynb
